Deixando o codigo mais limpo

--- a/jogo_da_forca.ipynb
+++ b/jogo_da_forca.ipynb
@@ -33,25 +33,70 @@
     "    print('*** Bem vindo ao jogo da forca***')\n",
     "    print('******************')\n",
     "\n",
-    "    palavra_secreta = 'banana'\n",
+    "    palavra_secreta = 'banana'.upper()\n",
+    "    letras_acertadas = ['_' for letra in palavra_secreta]\n",
     "\n",
+    "    # for letras in palavra_secreta:\n",
+    "    #     letras_acertadas.append('_')\n",
+    "\n",
+    "    letras_faltando = str(letras_acertadas.count('_'))\n",
+    "    print(f'ainda falta acertar {letras_faltando}')\n",
+    "    print(letras_acertadas)\n",
+    "    \n",
     "    enforcou = False\n",
     "    acertou = False\n",
+    "    erros = 0\n",
     "\n",
     "    while(not enforcou and not acertou):\n",
     "\n",
     "        chute = input('Qual letra?')\n",
-    "        index = 0\n",
-    "        for letra in palavra_secreta:\n",
-    "            if (chute == letra):\n",
-    "                print(f'encontrei a letra {letra} na posição {index}')\n",
-    "            index += 1\n",
-    "        print('jogando...')\n",
+    "        chute = chute.strip().upper()\n",
+    "        \n",
+    "        if(chute in palavra_secreta):\n",
+    "            index = 0\n",
+    "            for letra in palavra_secreta:\n",
+    "                if (chute.upper() == letra.upper()):\n",
+    "                    letras_acertadas[index] = letra\n",
+    "                index += 1\n",
+    "            else:\n",
+    "                print(f'voce errou, tente mais {6-erros} vezes')\n",
+    "                erros += 1 \n",
     "\n",
+    "            enforcou = erros == 6\n",
+    "            acertou = '_' not in letras_acertadas\n",
+    "            print(letras_acertadas)\n",
+    "\n",
+    "        if(acertou):\n",
+    "            print('Voce ganhou')\n",
+    "        else:\n",
+    "            print('voce perdeu')\n",
+    "        \n",
     "    print('Fim do jogo')\n",
     "\n",
     "if(__name__ == \"__main__\"):\n",
     "    jogar()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "palavra = 'aluracursos'\n",
+    "len(palavra)\n",
+    "palavra.find('l')"
    ]
   },
   {
