Ajustando funcoes e limpando codigo

--- a/jogo_da_forca.ipynb
+++ b/jogo_da_forca.ipynb
@@ -9,6 +9,92 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def msg_abertura():\n",
+    "    print('*********************************')\n",
+    "    print('*** Bem vindo ao jogo da forca***')\n",
+    "    print('*********************************')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def carrega_palavra_secreta():\n",
+    "    arquivo = open('palavras.txt', 'w', encoding = 'utf-8')\n",
+    "    palavra = []\n",
+    "\n",
+    "    for linha in arquivo:\n",
+    "        linha = linha.strip()\n",
+    "        palavra.append(linha)\n",
+    "    \n",
+    "    arquivo.close()\n",
+    "    \n",
+    "    numero = random.randrange(0,len(palavras))\n",
+    "    palavra_secreta = palavra[numero].upper()\n",
+    "    return palavra_secreta\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def inicializa_letras_acertadas(palavra):\n",
+    "    lista = ['_' for letra in palavra]\n",
+    "    return lista\n",
+    "\n",
+    "\n",
+    "    # for letras in palavra_secreta:\n",
+    "    #    letras_acertadas.append('_')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pede_chute():\n",
+    "    input('Qual letra?')\n",
+    "    chute = chute.strip().upper()\n",
+    "    return chute \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def marca_chute_correto(chute, letras_acertadas, palavra_secreta):\n",
+    "    index = 0\n",
+    "    for letra in palavra_secreta:\n",
+    "        if (chute.upper() == letra.upper()):\n",
+    "            letras_acertadas[index] = letra\n",
+    "        index += 1\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
@@ -29,19 +115,14 @@
    ],
    "source": [
     "def jogar():\n",
-    "    print('******************')\n",
-    "    print('*** Bem vindo ao jogo da forca***')\n",
-    "    print('******************')\n",
     "\n",
-    "    palavra_secreta = 'banana'.upper()\n",
-    "    letras_acertadas = ['_' for letra in palavra_secreta]\n",
-    "\n",
-    "    # for letras in palavra_secreta:\n",
-    "    #     letras_acertadas.append('_')\n",
-    "\n",
+    "    msg_abertura()\n",
+    "    palavra_secreta = carrega_palavra_secreta()\n",
+    "    letras_acertadas = inicializa_letras_acertadas(palavra_secreta) \n",
+    "    \n",
+    "    print(letras_acertadas)\n",
     "    letras_faltando = str(letras_acertadas.count('_'))\n",
     "    print(f'ainda falta acertar {letras_faltando}')\n",
-    "    print(letras_acertadas)\n",
     "    \n",
     "    enforcou = False\n",
     "    acertou = False\n",
@@ -49,15 +130,10 @@
     "\n",
     "    while(not enforcou and not acertou):\n",
     "\n",
-    "        chute = input('Qual letra?')\n",
-    "        chute = chute.strip().upper()\n",
+    "        chute = pede_chute()\n",
     "        \n",
     "        if(chute in palavra_secreta):\n",
-    "            index = 0\n",
-    "            for letra in palavra_secreta:\n",
-    "                if (chute.upper() == letra.upper()):\n",
-    "                    letras_acertadas[index] = letra\n",
-    "                index += 1\n",
+    "            marca_chute_correto(chute, letras_acertadas, palavra_secreta)\n",
     "            else:\n",
     "                print(f'voce errou, tente mais {6-erros} vezes')\n",
     "                erros += 1 \n",
@@ -79,24 +155,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "palavra = 'aluracursos'\n",
-    "len(palavra)\n",
-    "palavra.find('l')"
+    "arquivo = open('palavras.txt', 'w', encoding = 'utf-8')\n",
+    "arquivo.write('banana\\n')\n",
+    "arquivo.write('melancia\\n')\n",
+    "arquivo.close()"
    ]
   },
   {
